tests/compile_fail/attributes_grouped_arm.stderr
error[E0004]: non-exhaustive patterns: `Num::B(_)` not covered
  --> tests/compile_fail/attributes_grouped_arm.rs:11:15
   |
11 |         match n {
   |               ^ pattern `Num::B(_)` not covered
   |
note: `Num` defined here
  --> tests/compile_fail/attributes_grouped_arm.rs:4:6
   |
4  | enum Num {
   |      ^^^
5  |     A(i32),
6  |     B(i32),
   |     - not covered
   = note: the matched value is of type `Num`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
18 ~     },
19 +     Num::B(_) => todo!()
   |
